--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -129,6 +129,23 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # AI Chat endpoint (CORS handled by FastAPI middleware)
+        location /ai/ {
+            limit_req zone=api_limit burst=20 nodelay;
+
+            proxy_pass http://mcp_server;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # AI 回應需要較長時間
+            proxy_read_timeout 120s;
+            proxy_send_timeout 120s;
+        }
+
         # Root - Show service info
         location / {
             limit_req zone=general_limit burst=50 nodelay;
